<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="drop_down_list_header_default_text">Click to refresh&#8230;</string>
    <string name="drop_down_list_header_pull_text">Drop Down to refresh&#8230;</string>
    <string name="drop_down_list_header_release_text">Release to refresh&#8230;</string>
    <string name="drop_down_list_header_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_default_text">More</string>
    <string name="drop_down_list_footer_loading_text">Loading&#8230;</string>
    <string name="drop_down_list_footer_no_more_text">No More</string>
    
    <string name="image_content">Image</string>
    
    <string name="app_name">沃空间</string>
    <string name="default_url">http://fyimail.vicp.net:1080</string>
    <string name="default_baseurl">fyimail.vicp.net</string>
    
    <string name="action_settings">Settings</string>
    <string name="tv_account">帐号：</string>
    <string name="tv_password">密码：</string>
    <string name="tv_menu_transfer">传输管理</string>
    <string name="btn_quick_register">立即登录</string>
    <string name="et_account_hint">请输入您的手机号</string>
    <string name="et_password_hint">请输入密码</string>
    <string name="et_newpassword_hint">请输入新密码</string>
    <string name="et_confirm_password_hint">确认密码</string>
    <string name="et_regist_code">请输入验证码</string>
    <string name="et_password_hiden">隐藏密码</string>
    <string name="et_password_show">显示</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="log_logo">登陆云盘</string>
    <string name="login_to_cloud">登录360云盘</string>
    <string name="tv_forget_password">忘记密码</string>
    <string name="tv_my_cloud">我的云盘</string>
    <string name="tv_find">发现·浏览</string>
    <string name="tv_my_file">我的文件</string>
    <string name="tv_menu_title">我的空间</string>
    <string name="tv_menu_msg">电子书 音乐 壁纸 铃声</string>
    <string name="tv_file_name">遇见未知的自己.txt</string>
    <string name="tv_file_msg">188.3M  修改时间:2012–11–23</string>
    <string name="tv_file_op_delete">删除</string>
    <string name="tv_file_op_download">下载</string>
    <string name="tv_file_op_share">分享</string>
    <string name="tv_file_op_more">更多</string>
    <string name="tv_menu_account">475500230@qq.com</string>
    <string name="tv_menu_space">219M / 7.4G</string>
    <string name="tv_menu_auto_backup">自动备份照片</string>
    <string name="tv_menu_history">查看最近操作</string>
    <string name="tv_menu_connect">发送文件到电脑</string>
    <string name="tv_menu_reward">免费抽空间</string>
    <string name="tv_menu_setting">设置</string>
    <string name="tv_menu_logout">退出登录</string>
    <string name="btn_upload">上传</string>
    <string name="btn_download">下载</string>
    <string name="btn_more">更多操作</string>
    <string name="btn_share">发文件给好友</string>
    <string name="btn_show">显示</string>
    <string name="btn_add_accounts">快速注册</string>
    <string name="et_server_hint">请输入服务器地址</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <item type="id" name="tag_first"></item>
    <item type="id" name="tag_second"></item>
    <item type="id" name="tag_third"></item>
    <item type="id" name="tag_fourth"></item>
    <string name="cancle">取消</string>
	<string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>

    <string name="Atile1">私属空间</string>
    <string name="Atile2">免流量应用</string>



    <string name="mysapce_menu">照片</string>
    <string name="mysapce_menu1">音乐</string>
    <string name="mysapce_menu2">网盘</string>
    <string name="mysapce_menu3">小心事</string>
    <string name="mysapce_menu4">联系人</string>
    <string name="mysapce_menu5">短信</string>
    <string name="mysapce_menu6">menu6</string>
    <string name="mysapce_menu7">menu7</string>
    <string name="addButtonText">增加</string>
    <string name="Complete">打开</string>
    <string name="Error">重试</string>
    <string name="Upload">上传</string>
    <string name="folder_all">所有照片</string>
    <string name="preview">预览</string>
    <string name="msg_no_camera">没有系统相机</string>
    <string name="msg_amount_limit">已经达到最高选择数量</string>

</resources>