<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity" >

    <include android:id="@+id/reg_title" layout="@layout/title_bar" />

    <LinearLayout
        android:id="@+id/reg_account"
        style="@style/accountInputBorder"
        android:layout_marginTop="18dp"
        android:layout_below="@id/reg_title"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qihoo_accounts_user_lable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="  |  " />

        <EditText
            android:id="@+id/reg_ed_account"
            style="@style/accountEditText"
            android:hint="@string/et_account_hint"
            android:layout_height="fill_parent" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/reg_password"
        style="@style/accountInputBorder"
        android:layout_below="@id/reg_account"
        android:layout_marginTop="50dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qihoo_accounts_pass_lable"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="  |  " />

        <EditText
            android:id="@+id/reg_ed_pwd"
            style="@style/accountEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/et_password_hint"
            android:password="true"
            android:layout_height="fill_parent" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/reg_confim_password"
        style="@style/accountInputBorder"
        android:layout_below="@id/reg_password"
        android:layout_marginTop="50dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qihoo_accounts_pass_lable"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="  |  " />

        <EditText
            android:id="@+id/reg_ed_confirm_pwd"
            style="@style/accountEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/et_confirm_password_hint"
            android:password="true"
            android:layout_height="fill_parent" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_confim_password"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:orientation="horizontal"
        android:layout_marginTop="13dp" >


        <com.chd.yunpan.view.CircularProgressButton
            android:id="@+id/log_btn_log"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_margin="50dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cpb_cornerRadius="30dp"
            app:cpb_textComplete="注册完成"
            app:cpb_textError="注册失败"
            app:cpb_textIdle="提交"
            app:cpb_selectorIdle="@drawable/idle_state_selector"
            app:cpb_selectorComplete="@drawable/complete_state_selector"
            app:cpb_selectorError="@drawable/error_state_selector"/>
    </LinearLayout>




</RelativeLayout>