<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:id="@+id/reg_account"
        style="@style/accountInputBorder"
        android:layout_marginTop="18dp"
        android:layout_below="@id/reg_title"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qihoo_accounts_user_lable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="  |  " />

        <EditText
            android:id="@+id/reg_ed_account"
            style="@style/accountEditText"
            android:hint="@string/et_account_hint"
            android:inputType="phone"
            android:layout_height="fill_parent" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/reg_confim_password"
        android:layout_below="@id/reg_password"
        android:layout_marginTop="50dp"
        style="@style/accountInputBorder"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:background="#fff">
        <LinearLayout
            style="@style/accountInputBorder"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qihoo_accounts_pass_lable"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="  |  " />

            <EditText
                android:id="@+id/reg_ed_confirm_pwd"
                style="@style/accountEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/et_regist_code"
                android:layout_height="fill_parent" />


        </LinearLayout>

        <com.chd.yunpan.view.CircularProgressButton
            android:id="@+id/log_btn_code"
            android:layout_width="100dp"
            android:layout_marginLeft="30dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:cpb_cornerRadius="30dp"
            app:cpb_textComplete="重新发送"
            app:cpb_textError="发送失败"
            app:cpb_textIdle="发送验证码"
            app:cpb_selectorIdle="@drawable/idle_state_selector"
            app:cpb_selectorComplete="@drawable/complete_state_selector"
            app:cpb_selectorError="@drawable/error_state_selector"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/reg_password"
        style="@style/accountInputBorder"
        android:layout_below="@id/reg_account"
        android:layout_marginTop="50dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qihoo_accounts_pass_lable"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="  |  " />

        <EditText
            android:id="@+id/reg_ed_pwd"
            style="@style/accountEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/et_newpassword_hint"
            android:password="true"
            android:layout_height="fill_parent" />


    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayoutReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_confim_password"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:orientation="horizontal"
        android:layout_marginTop="13dp" >


        <com.chd.yunpan.view.CircularProgressButton
            android:id="@+id/log_btn_log"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_margin="50dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cpb_cornerRadius="30dp"
            app:cpb_textComplete="注册完成"
            app:cpb_textError="注册失败"
            app:cpb_textIdle="提交"
            app:cpb_selectorIdle="@drawable/idle_state_selector"
            app:cpb_selectorComplete="@drawable/complete_state_selector"
            app:cpb_selectorError="@drawable/error_state_selector"/>
    </LinearLayout>

</LinearLayout>