<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/tv_title"
        layout="@layout/title_head"
        android:background="@color/background" />

    <LinearLayout
        android:id="@+id/ll_head_layout"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:background="@color/background"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:layout_weight="1.0"
            android:src="@drawable/login_head_img" />

        <TextView
            android:id="@+id/ll_head_help"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical|left"
            android:paddingLeft="15dp"
            android:text="帮助"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_account2"
        style="@style/accountInputBorder"
        android:layout_height="50dp"
        android:layout_below="@id/ll_head_layout"
        android:layout_marginTop="18dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qihoo_accounts_user_lable" />

        <EditText
            android:id="@+id/log_name"
            style="@style/accountEditText"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:hint="@string/et_account_hint"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_password"
        style="@style/accountInputBorder"
        android:layout_height="50dp"
        android:layout_below="@id/ll_account2"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qihoo_accounts_pass_lable" />

        <EditText
            android:id="@+id/log_pwd"
            style="@style/accountEditText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:hint="@string/et_password_hint"
            android:password="true" />

        <Button
            android:id="@+id/log_btn_show"
            android:layout_width="70dp"
            android:layout_height="fill_parent"
            android:background="@drawable/qihoo_accounts_btn_show_normal"
            android:focusable="false"
            android:text="显示"
            android:textColor="@color/grey"
            android:textSize="14sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_smss_code"
        style="@style/accountInputBorder"
        android:layout_height="50dp"
        android:layout_below="@id/ll_password"
        android:visibility="gone"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qihoo_accounts_pass_lable" />


        <EditText
            android:id="@+id/login_et_code"
            style="@style/accountEditText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:hint="@string/et_regist_code"
            android:inputType="number" />

    <com.chd.yunpan.view.circleimage.CircularProgressButton
        android:id="@+id/log_btn_code"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:cpb_cornerRadius="30dp"
        app:cpb_selectorComplete="@drawable/complete_state_selector"
        app:cpb_selectorError="@drawable/error_state_selector"
        app:cpb_selectorIdle="@drawable/idle_state_selector"
        app:cpb_textComplete="重新发送"
        app:cpb_textError="发送失败"
        app:cpb_textIdle="发送验证码" />
</LinearLayout>

<LinearLayout
android:id="@+id/linearLayout1"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_below="@id/ll_smss_code"
android:layout_marginLeft="18dp"
android:layout_marginRight="18dp"
android:layout_marginTop="40dp"
android:orientation="horizontal">

<com.chd.yunpan.view.circleimage.CircularProgressButton
    android:id="@+id/log_btn_log"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:textColor="@color/white"
    android:textSize="18sp"
    app:cpb_cornerRadius="48dp"
    app:cpb_selectorComplete="@drawable/complete_state_selector"
    app:cpb_selectorError="@drawable/error_state_selector"
    app:cpb_selectorIdle="@drawable/idle_state_selector"
    app:cpb_textComplete="登陆完成"
    app:cpb_textError="登陆失败"
    app:cpb_textIdle="授权登陆" />

<Button
    style="@style/accountButtonStyle"
    android:layout_marginRight="4dp"
    android:text="立即登录"
    android:visibility="gone" />
</LinearLayout>

<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_above="@id/linearLayout1"
android:gravity="center"
android:text="记住密码"
android:visibility="invisible" />

<TextView
android:id="@+id/log_tv_register"
android:layout_width="wrap_content"
android:layout_height="30dp"
android:layout_alignLeft="@id/linearLayout1"
android:layout_below="@id/ll_smss_code"
android:clickable="true"
android:gravity="center"
android:text="注册帐号"
android:textColor="@color/background" />

<TextView
android:id="@+id/log_tv_forgrt"
android:layout_width="wrap_content"
android:layout_height="30dp"
android:layout_alignBottom="@id/log_tv_register"
android:layout_alignRight="@id/linearLayout1"
android:clickable="true"
android:gravity="center"
android:text="忘记密码?"
android:textColor="@color/background" />


    </RelativeLayout>